[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://switch.wav" type="AudioStream" id=5]
[ext_resource path="res://explosion.wav" type="AudioStream" id=6]
[ext_resource path="res://bg.wav" type="AudioStream" id=7]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.687708, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.189369, 0.189369, 0.189369, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Environment" id=3]
background_mode = 4
auto_exposure_scale = 0.01
glow_enabled = true
glow_levels/1 = true
glow_levels/3 = false
glow_levels/5 = false
glow_intensity = 3.27
glow_strength = 0.81
glow_bloom = 1.0
glow_bicubic_upscale = true
adjustment_color_correction = SubResource( 2 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
enemy_scene = ExtResource( 3 )
player_start_position = Vector2( 150, 462 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 150, 462 )
speed = 100

[node name="Spawner50" type="Position2D" parent="."]
position = Vector2( 50, 0 )

[node name="Spawner150" type="Position2D" parent="."]
position = Vector2( 150, 0 )

[node name="Spawner250" type="Position2D" parent="."]
position = Vector2( 250, 0 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="HUD" parent="." instance=ExtResource( 4 )]
layer = -1

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="MoveSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 0.1
attenuation = 3.73213

[node name="RestartSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -7.0

[node name="ExplosionSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="BGMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0

[connection signal="got_hit" from="Player" to="." method="game_over"]
[connection signal="moved" from="Player" to="." method="_on_Player_moved"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
